# swc-plugin-miniprogram-require-async

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: npm-publish.yml
src/: lib.rs
tests/: fixture.rs
tests/fixture/all/: input.js  output.js
